Fixed Login form spacing

--- a/src/styles/views/_login.scss
+++ b/src/styles/views/_login.scss
@@ -2,6 +2,7 @@
 .login{
     background: linear-gradient(to right, #ec008c, #fc6767);
     .form{
+        width: 30%;
         padding: 3em;
         .fas{
             user-select: none;
